test/integration/good/for_early_return.stan
functions {
  real ends() {
    for (i in 1:10){
      return 1;
    }
  }
}

transformed parameters {
  real a = ends();
}
