test/integration/bad/new/ill-formed-statement7.stan
transformed data { for ( T in 1: while)}